--- a/apps/admin/backend/package.json
+++ b/apps/admin/backend/package.json
@@ -45,7 +45,9 @@
     "@votingworks/grout": "workspace:*",
     "@votingworks/image-utils": "workspace:*",
     "@votingworks/logging": "workspace:*",
+    "@votingworks/printing": "workspace:*",
     "@votingworks/types": "workspace:*",
+    "@votingworks/ui": "workspace:*",
     "@votingworks/usb-drive": "workspace:*",
     "@votingworks/utils": "workspace:*",
     "compression": "^1.7.4",
@@ -60,6 +62,8 @@
     "micromatch": "^4.0.5",
     "multer": "^1.4.5-lts.1",
     "object-hash": "^3.0.0",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
     "tmp": "^0.2.1",
     "uuid": "9.0.1",
     "zip-stream": "^4.1.0",
@@ -72,6 +76,7 @@
     "@types/express": "4.17.14",
     "@types/fs-extra": "11.0.1",
     "@types/jest": "^29.5.3",
+    "@types/jest-image-snapshot": "^6.4.0",
     "@types/lodash.memoize": "^4.1.9",
     "@types/lodash.set": "^4.3.7",
     "@types/luxon": "^3.0.0",
@@ -79,6 +84,8 @@
     "@types/multer": "^1.4.7",
     "@types/node": "16.18.23",
     "@types/object-hash": "^3.0.6",
+    "@types/react": "18.2.18",
+    "@types/react-dom": "^18.2.7",
     "@types/supertest": "^2.0.10",
     "@types/tmp": "0.2.4",
     "@types/uuid": "9.0.5",
@@ -91,6 +98,7 @@
     "fast-check": "2.23.2",
     "is-ci-cli": "2.2.0",
     "jest": "^29.6.2",
+    "jest-image-snapshot": "^6.4.0",
     "jest-junit": "^16.0.0",
     "jest-watch-typeahead": "^2.2.2",
     "lint-staged": "11.0.0",
