--- a/apps/admin/frontend/package.json
+++ b/apps/admin/frontend/package.json
@@ -86,12 +86,14 @@
     "normalize.css": "^8.0.1",
     "pagedjs": "^0.1.40",
     "path": "^0.12.7",
+    "pdfjs-dist": "3.11.174",
     "pluralize": "8.0.0",
     "prompts": "2.4.0",
     "react": "18.2.0",
     "react-app-polyfill": "3.0.0",
     "react-dev-utils": "12.0.1",
     "react-dom": "18.2.0",
+    "react-pdf": "^7.7.0",
     "react-router-dom": "^5.3.4",
     "resolve": "1.18.1",
     "semver": "7.3.2",
@@ -130,6 +132,7 @@
     "@votingworks/backend": "workspace:*",
     "@votingworks/grout-test-utils": "workspace:*",
     "@votingworks/monorepo-utils": "workspace:*",
+    "@votingworks/printing": "workspace:*",
     "@votingworks/test-utils": "workspace:*",
     "@votingworks/usb-drive": "workspace:*",
     "eslint-plugin-vx": "workspace:*",
