--- a/libs/logging/package.json
+++ b/libs/logging/package.json
@@ -14,7 +14,8 @@
     "type-check": "tsc --build",
     "build": "tsc --build tsconfig.build.json",
     "build:generate-docs": "pnpm esr --cache ./scripts/generate_documentation.ts",
-    "build:generate-log-details": "pnpm esr --cache ./scripts/generate_types_from_toml.ts && eslint src/log_event_ids.ts --fix && pnpm esr --cache ./scripts/generate_rust_enums_from_toml.ts",
+    "build:generate-typescript-types": "pnpm esr --cache ./scripts/generate_types_from_toml.ts",
+    "build:generate-rust-types": "pnpm esr --cache ./scripts/generate_rust_enums_from_toml.ts",
     "clean": "rm -rf build tsconfig.tsbuildinfo tsconfig.build.tsbuildinfo",
     "lint": "pnpm type-check && eslint .",
     "lint:fix": "pnpm type-check && eslint . --fix",
