--- a/apps/admin/frontend/package.json
+++ b/apps/admin/frontend/package.json
@@ -92,6 +92,7 @@
     "react-app-polyfill": "3.0.0",
     "react-dev-utils": "12.0.1",
     "react-dom": "18.2.0",
+    "react-pdf": "^7.7.0",
     "react-router-dom": "^5.3.4",
     "resolve": "1.18.1",
     "semver": "7.3.2",
@@ -117,6 +118,7 @@
     "@types/jest": "^29.5.3",
     "@types/kiosk-browser": "workspace:*",
     "@types/node": "16.18.23",
+    "@types/pdfjs-dist": "2.1.3",
     "@types/pluralize": "^0.0.29",
     "@types/react": "18.2.18",
     "@types/react-dom": "^18.2.7",
@@ -130,6 +132,7 @@
     "@votingworks/backend": "workspace:*",
     "@votingworks/grout-test-utils": "workspace:*",
     "@votingworks/monorepo-utils": "workspace:*",
+    "@votingworks/printing": "workspace:*",
     "@votingworks/test-utils": "workspace:*",
     "@votingworks/usb-drive": "workspace:*",
     "eslint-plugin-vx": "workspace:*",
