--- a/.env
+++ b/.env
@@ -6,6 +6,7 @@ REACT_APP_VX_ENABLE_DEV_DOCK=TRUE
 REACT_APP_VX_SKIP_PIN_ENTRY=FALSE
 REACT_APP_VX_USE_MOCK_CARDS=FALSE
 REACT_APP_VX_USE_MOCK_USB_DRIVE=FALSE
+REACT_APP_VX_USE_MOCK_PRINTER=FALSE
 REACT_APP_VX_SKIP_CVR_ELECTION_HASH_CHECK=FALSE
 REACT_APP_VX_SKIP_SCAN_ELECTION_HASH_CHECK=FALSE
 REACT_APP_VX_SKIP_ELECTION_PACKAGE_AUTHENTICATION=FALSE
