--- a/apps/admin/frontend/package.json
+++ b/apps/admin/frontend/package.json
@@ -92,7 +92,7 @@
     "react-app-polyfill": "3.0.0",
     "react-dev-utils": "12.0.1",
     "react-dom": "18.2.0",
-    "react-pdf": "^7.7.0",
+    "react-pdf": "7.7.0",
     "react-router-dom": "^5.3.4",
     "resolve": "1.18.1",
     "semver": "7.3.2",
