--- a/libs/cdf-schema-builder/package.json
+++ b/libs/cdf-schema-builder/package.json
@@ -36,7 +36,7 @@
   },
   "dependencies": {
     "@votingworks/basics": "workspace:*",
-    "jsdom": "20.0.1",
+    "happy-dom": "^13.8.6",
     "json-schema": "^0.4.0",
     "zod": "3.14.4"
   },
