--- a/libs/converter-nh-accuvote/package.json
+++ b/libs/converter-nh-accuvote/package.json
@@ -30,9 +30,9 @@
     "buffer": "^6.0.3",
     "chalk": "4.1.2",
     "debug": "4.3.4",
+    "happy-dom": "^13.8.6",
     "he": "^1.2.0",
     "js-sha256": "^0.9.0",
-    "jsdom": "20.0.1",
     "luxon": "^3.0.0",
     "tmp": "^0.2.1",
     "zod": "3.14.4"
@@ -40,7 +40,6 @@
   "devDependencies": {
     "@types/debug": "4.1.8",
     "@types/he": "^1.1.2",
-    "@types/jsdom": "20.0.0",
     "@types/luxon": "^3.0.0",
     "@types/tmp": "0.2.4",
     "@votingworks/fixtures": "workspace:*",
