--- a/libs/hmpb/tsconfig.json
+++ b/libs/hmpb/tsconfig.json
@@ -8,7 +8,7 @@
     "composite": true,
     "jsx": "react-jsx",
     "esModuleInterop": true,
-    "lib": ["esnext"],
+    "lib": ["esnext", "dom"],
     "module": "node16",
     "moduleResolution": "node16",
     "noEmit": true,
