--- a/libs/grout/package.json
+++ b/libs/grout/package.json
@@ -15,9 +15,9 @@
     "lint:fix": "pnpm type-check && eslint . --fix",
     "pre-commit": "lint-staged",
     "test": "is-ci test:ci test:watch",
-    "test:ci": "jest --coverage --reporters=default --reporters=jest-junit --maxWorkers=6",
-    "test:coverage": "jest --coverage",
-    "test:watch": "jest --watch",
+    "test:ci": "vitest run --coverage",
+    "test:coverage": "vitest --coverage",
+    "test:watch": "vitest",
     "type-check": "tsc --build"
   },
   "dependencies": {
@@ -29,19 +29,16 @@
   "devDependencies": {
     "@types/debug": "4.1.8",
     "@types/express": "4.17.14",
-    "@types/jest": "^29.5.3",
     "@types/luxon": "^3.0.0",
     "@types/node-fetch": "^2.6.0",
+    "@vitest/coverage-istanbul": "^2.1.8",
     "eslint-plugin-vx": "workspace:*",
     "expect-type": "^0.15.0",
     "express": "4.18.2",
     "is-ci-cli": "2.2.0",
-    "jest": "^29.6.2",
-    "jest-junit": "^16.0.0",
-    "jest-watch-typeahead": "^2.2.2",
     "lint-staged": "11.0.0",
     "sort-package-json": "^1.50.0",
-    "ts-jest": "29.1.1"
+    "vitest": "^2.1.8"
   },
   "packageManager": "pnpm@8.15.5"
 }
