--- a/libs/fixtures/package.json
+++ b/libs/fixtures/package.json
@@ -20,9 +20,9 @@
     "lint": "pnpm type-check && eslint .",
     "lint:fix": "pnpm type-check && eslint . --fix",
     "test": "is-ci test:ci test:watch",
-    "test:coverage": "jest --coverage",
-    "test:watch": "jest --watch",
-    "test:ci": "jest --coverage --ci --reporters=default --reporters=jest-junit --maxWorkers=6",
+    "test:coverage": "vitest --coverage",
+    "test:watch": "vitest",
+    "test:ci": "vitest run --coverage",
     "pre-commit": "lint-staged"
   },
   "dependencies": {
@@ -33,16 +33,13 @@
     "js-sha256": "^0.9.0"
   },
   "devDependencies": {
-    "@types/jest": "^29.5.3",
     "@types/node": "20.16.0",
+    "@vitest/coverage-istanbul": "^2.1.8",
     "eslint-plugin-vx": "workspace:*",
     "is-ci-cli": "2.2.0",
-    "jest": "^29.6.2",
-    "jest-junit": "^16.0.0",
-    "jest-watch-typeahead": "^2.2.2",
     "lint-staged": "11.0.0",
     "sort-package-json": "^1.50.0",
-    "ts-jest": "29.1.1"
+    "vitest": "^2.1.8"
   },
   "packageManager": "pnpm@8.15.5"
 }
