--- a/libs/fixtures/package.json
+++ b/libs/fixtures/package.json
@@ -15,7 +15,6 @@
     "type-check": "tsc --build",
     "build": "pnpm --filter $npm_package_name... build:self",
     "build:self": "tsc --build tsconfig.build.json",
-    "build:resources": "bash build_resources.sh",
     "clean": "pnpm --filter $npm_package_name... clean:self",
     "clean:self": "rm -rf build && tsc --build --clean tsconfig.build.json",
     "lint": "pnpm type-check && eslint .",
@@ -23,7 +22,7 @@
     "test": "is-ci test:ci test:watch",
     "test:coverage": "jest --coverage",
     "test:watch": "jest --watch",
-    "test:ci": "jest --coverage --ci --reporters=default --reporters=jest-junit --maxWorkers=6 && pnpm build:resources --check",
+    "test:ci": "jest --coverage --ci --reporters=default --reporters=jest-junit --maxWorkers=6",
     "pre-commit": "lint-staged"
   },
   "dependencies": {
@@ -36,7 +35,6 @@
   "devDependencies": {
     "@types/jest": "^29.5.3",
     "@types/node": "20.16.0",
-    "@votingworks/res-to-ts": "workspace:*",
     "eslint-plugin-vx": "workspace:*",
     "is-ci-cli": "2.2.0",
     "jest": "^29.6.2",
