--- a/libs/monorepo-utils/package.json
+++ b/libs/monorepo-utils/package.json
@@ -15,19 +15,19 @@
     "lint": "pnpm type-check && eslint .",
     "lint:fix": "pnpm type-check && eslint . --fix",
     "test": "is-ci test:ci test:watch",
-    "test:coverage": "jest --coverage",
-    "test:watch": "jest --watch",
-    "test:ci": "jest --coverage --ci --reporters=default --reporters=jest-junit --maxWorkers=7",
+    "test:coverage": "vitest --coverage",
+    "test:watch": "vitest",
+    "test:ci": "vitest run --coverage",
     "pre-commit": "lint-staged"
   },
   "dependencies": {
     "@votingworks/basics": "workspace:*"
   },
   "devDependencies": {
-    "@types/jest": "^29.5.3",
     "@types/node": "20.16.0",
     "@typescript-eslint/eslint-plugin": "6.7.0",
     "@typescript-eslint/parser": "6.7.0",
+    "@vitest/coverage-istanbul": "^2.1.8",
     "esbuild-runner": "2.2.2",
     "eslint": "8.57.0",
     "eslint-config-prettier": "^9.0.0",
@@ -38,14 +38,11 @@
     "eslint-plugin-prettier": "^5.0.0",
     "eslint-plugin-vx": "workspace:*",
     "is-ci-cli": "2.2.0",
-    "jest": "^29.6.2",
-    "jest-junit": "^16.0.0",
-    "jest-watch-typeahead": "^2.2.2",
     "lint-staged": "11.0.0",
     "prettier": "3.0.3",
     "sort-package-json": "^1.50.0",
-    "ts-jest": "29.1.1",
-    "typescript": "5.6.2"
+    "typescript": "5.6.2",
+    "vitest": "^2.1.8"
   },
   "packageManager": "pnpm@8.15.5"
 }
