--- a/libs/types/package.json
+++ b/libs/types/package.json
@@ -18,9 +18,9 @@
     "lint": "pnpm type-check && eslint .",
     "lint:fix": "pnpm type-check && eslint . --fix",
     "test": "is-ci test:ci test:watch",
-    "test:coverage": "jest --coverage",
-    "test:ci": "jest --coverage --reporters=default --reporters=jest-junit --maxWorkers=6",
-    "test:watch": "jest --watch",
+    "test:coverage": "vitest --coverage",
+    "test:ci": "vitest run --coverage",
+    "test:watch": "vitest",
     "pre-commit": "lint-staged",
     "cdf:ballot-definition:build-schema": "cdf-schema-builder data/cdf/ballot-definition/nist-schema.xsd src/cdf/ballot-definition/vx-schema.json > src/cdf/ballot-definition/index.ts",
     "cdf:cvr:build-schema": "cdf-schema-builder data/cdf/cast-vote-records/nist-schema.xsd src/cdf/cast-vote-records/vx-schema.json > src/cdf/cast-vote-records/index.ts",
@@ -36,13 +36,13 @@
     "zod": "3.23.5"
   },
   "devDependencies": {
-    "@types/jest": "^29.5.3",
     "@types/kiosk-browser": "workspace:*",
     "@types/lodash.clonedeep": "^4.5.9",
     "@types/lodash.set": "^4.3.7",
     "@types/lodash.setwith": "^4.3.9",
     "@types/node": "20.16.0",
     "@types/react": "18.3.3",
+    "@vitest/coverage-istanbul": "^2.1.8",
     "@votingworks/cdf-schema-builder": "workspace:*",
     "ajv": "^8.12.0",
     "ajv-draft-04": "^1.0.0",
@@ -51,14 +51,11 @@
     "fast-check": "2.23.2",
     "fast-glob": "^3.2.11",
     "is-ci-cli": "2.2.0",
-    "jest": "^29.6.2",
-    "jest-junit": "^16.0.0",
-    "jest-watch-typeahead": "^2.2.2",
     "lint-staged": "11.0.0",
     "lodash.clonedeep": "^4.5.0",
     "lodash.set": "^4.3.2",
     "sort-package-json": "^1.50.0",
-    "ts-jest": "29.1.1"
+    "vitest": "^2.1.8"
   },
   "packageManager": "pnpm@8.15.5"
 }
