--- a/libs/custom-scanner/package.json
+++ b/libs/custom-scanner/package.json
@@ -16,9 +16,9 @@
     "lint:fix": "pnpm type-check && eslint . --fix",
     "pre-commit": "lint-staged",
     "test": "is-ci test:ci test:watch",
-    "test:ci": "jest --ci --coverage --reporters=default --reporters=jest-junit --maxWorkers=6",
-    "test:coverage": "jest --coverage",
-    "test:watch": "jest --watch",
+    "test:ci": "pnpm build && pnpm test:coverage --run",
+    "test:coverage": "vitest --coverage",
+    "test:watch": "vitest",
     "type-check": "tsc --build"
   },
   "dependencies": {
@@ -36,18 +36,15 @@
     "@types/jest": "^29.5.3",
     "@types/node": "20.16.0",
     "@types/w3c-web-usb": "^1.0.6",
+    "@vitest/coverage-istanbul": "^2.1.8",
     "@votingworks/test-utils": "workspace:*",
     "esbuild": "0.21.2",
     "esbuild-runner": "2.2.2",
     "eslint-plugin-vx": "workspace:*",
     "fast-check": "2.23.2",
     "is-ci-cli": "2.2.0",
-    "jest": "^29.6.2",
-    "jest-junit": "^16.0.0",
-    "jest-mock-extended": "^3.0.4",
-    "jest-watch-typeahead": "^2.2.2",
-    "ts-jest": "29.1.1",
-    "vite": "4.5.2"
+    "vite": "4.5.2",
+    "vitest": "^2.1.8"
   },
   "packageManager": "pnpm@8.15.5"
 }
