--- a/libs/hmpb/package.json
+++ b/libs/hmpb/package.json
@@ -21,10 +21,9 @@
     "pre-commit": "lint-staged",
     "start": "vite -c vite.config.ts src/preview",
     "test": "is-ci test:ci test:watch",
-    "test:ci": "jest --coverage --reporters=default --reporters=jest-junit --maxWorkers=6",
-    "test:coverage": "jest --coverage",
-    "test:debug": "node --inspect-brk $(which jest) --runInBand --no-cache",
-    "test:watch": "jest --watch",
+    "test:ci": "pnpm build && pnpm test:coverage --run",
+    "test:coverage": "vitest --coverage",
+    "test:watch": "vitest",
     "type-check": "tsc --build"
   },
   "dependencies": {
@@ -48,27 +47,23 @@
     "styled-components": "^5.3.11"
   },
   "devDependencies": {
-    "@jest/types": "^29.6.1",
     "@types/debug": "4.1.8",
-    "@types/jest": "^29.5.3",
     "@types/node": "20.16.0",
     "@types/react": "18.3.3",
     "@types/react-dom": "18.3.0",
     "@types/styled-components": "^5.1.26",
     "@types/tmp": "0.2.4",
+    "@vitest/coverage-istanbul": "^2.1.8",
     "@votingworks/monorepo-utils": "workspace:*",
     "esbuild": "0.21.2",
     "esbuild-runner": "2.2.2",
     "eslint-plugin-vx": "workspace:*",
     "is-ci-cli": "2.2.0",
-    "jest": "^29.6.2",
-    "jest-junit": "^16.0.0",
-    "jest-watch-typeahead": "^2.2.2",
     "lint-staged": "11.0.0",
     "sort-package-json": "^1.50.0",
     "tmp": "^0.2.1",
-    "ts-jest": "29.1.1",
-    "vite": "4.5.2"
+    "vite": "4.5.2",
+    "vitest": "^2.1.8"
   },
   "engines": {
     "node": ">= 12"
