--- a/libs/hmpb/package.json
+++ b/libs/hmpb/package.json
@@ -38,6 +38,7 @@
     "buffer": "^6.0.3",
     "debug": "4.3.4",
     "js-sha256": "^0.9.0",
+    "p-limit": "^3.1.0",
     "path": "^0.12.7",
     "pdf-lib": "^1.17.1",
     "playwright": "^1.40.1",
