--- a/apps/design/backend/package.json
+++ b/apps/design/backend/package.json
@@ -42,6 +42,7 @@
     "@votingworks/ui": "workspace:*",
     "@votingworks/utils": "workspace:*",
     "auth0": "4.17.0",
+    "csv-parse": "^5.5.0",
     "debug": "4.3.4",
     "dotenv": "16.3.1",
     "dotenv-expand": "9.0.0",
